--- a/lovek1.html
+++ b/lovek1.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Document</title>
+    <link rel="icon" href="./WhatsApp Image 2025-03-11 at 14.46.41_26eb2c55.jpg">
     
 </head>
 <body>
     <h1>Introducation</h1>
     hi i am lakshmipathy,I'm from gingee
     <p>HTML stand of hyper test markup language.</p>
+    <p>UI/UX design 1efgnfhm7ikmnfhn5ji7ntnbgrbt</p>
     <hr>
     <div>HTML,CSS,C#,JAVA...</div>
 </body>
