--- a/lovek1.html
+++ b/lovek1.html
@@ -13,6 +13,39 @@
     <p>HTML stand of hyper test markup language.</p>
     <p>UI/UX design 1efgnfhm7ikmnfhn5ji7ntnbgrbt</p>
     <hr>
-    <div>HTML,CSS,C#,JAVA...</div>
+    <em>hello em</em>
+    <i>hello i</i>
+    <p>hi am <em>jack</em></p>
+    <strong>hinata</strong>
+    <div>HTML,CSS,C#,JAVA...</div><ol><li>home</li>
+    <li>phone</li>
+<li>book</li></ol><hr><ul><li>home</li></ul><a href="https://github.com/Lakshmipathy2511/html11.git">link</a>
+<a href="tel:9360293978">9360293978</a>
+<a href="mailto:lakshmipathy6789@gmail.com">lakshmipathy@gmail.com</a>
+tag: table,th,tr,td,<li></li>
+<hr>
+<table border="1">
+    <thead>
+        <tr>
+            <th>S.NO</th>
+            <th>NAME</th>
+<th>COLLEGE</th>
+<th>DEPARTMENT</th>
+<th>YEAR</th>
+        </tr>
+
+    </thead>
+    <tbody>
+        <tr>
+        <td>1</td>
+        <td>Lakshmipathy</td>
+        <td>AL-AMEEN CLG</td>
+        <td>BSc-C.S</td>
+        <td>2021-2024</td>
+        </tr>
+    </tbody>
+</table>
+<hr>
+<a href="https://www.linkedin.com/help/linkedin/?trk=p_settings_helpcenter_globalnav_android" target="_blank">Linkedin Profile</a>
 </body>
 </html>
