--- a/lovek1.html
+++ b/lovek1.html
@@ -47,5 +47,35 @@ tag: table,th,tr,td,<li></li>
 </table>
 <hr>
 <a href="https://www.linkedin.com/help/linkedin/?trk=p_settings_helpcenter_globalnav_android" target="_blank">Linkedin Profile</a>
+<hr>
+<form action="/formdata"method="get">
+    <br>
+<label for="userName">User Name</label><br>
+
+<input type="text"name="username"placeholder="Enter Your name">
+<br>
+<label for="Password">Password</label><br>
+
+<input type="password" placeholder="Enter Your Password">
+<br>
+<textarea name="" id="">Tell us about your experience
+
+</textarea>
+<br>
+<select name="" id="">
+   
+    <option value ="">Data1</option>
+    <option value="">Data2</option>
+    <option value="">Data3</option>
+</select>
+<br>
+
+<input type="file">
+</form>
+<header><nav>star</nav></header>
+<main><article>i am from tvm </article></main>
+<section></section>
+<div></div>
+<footer></footer>
 </body>
 </html>
